<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/tv_title"
        android:layout_gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/AppTheme.TextView.Secondary"
        android:text="@string/tv_profile_welcome_msg_text"/>

    <com.github.abdularis.civ.AvatarImageView
        android:id="@+id/iv_avatar"
        android:layout_width="@dimen/logo_width_large"
        android:layout_height="@dimen/logo_height_large"
        android:layout_marginBottom="@dimen/inter_view_margin"
        android:layout_marginTop="@dimen/inter_section_vertical_margin"
        android:paddingBottom="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:state="INITIAL"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="2dp"
        app:textColor="@color/colorPrimary"/>

    <android.support.design.widget.FloatingActionButton 
        android:id="@+id/fab_add_photo"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        app:fabSize="mini"
        android:src="@drawable/ic_add_a_photo"
        app:layout_constraintEnd_toEndOf="@id/iv_avatar"
        app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/container_display_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_avatar"
        android:layout_marginTop="@dimen/inter_section_vertical_margin">
        <EditText
            android:id="@+id/et_display_name"
            android:contentDescription="@string/et_display_name_content_desc"
            android:hint="@string/et_display_name_hint"
            android:imeActionLabel="@string/ime_action_label_next"
            android:inputType="textCapWords"
            style="@style/AppTheme.EditText"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/container_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inter_view_margin"
        app:layout_constraintStart_toStartOf="@id/et_display_name"
        app:layout_constraintTop_toBottomOf="@+id/container_display_name">
        <EditText
            android:id="@+id/et_email"
            android:contentDescription="@string/et_display_name_content_desc"
            android:hint="@string/et_email_hint"
            android:imeActionLabel="@string/ime_action_label_next"
            style="@style/AppTheme.EditText"
            tools:text="test@email.com"
            android:enabled="false"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_update_profile"
        style="@style/AppTheme.Button.Primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/inter_view_margin"
        app:layout_constraintBottom_toTopOf="@id/btn_logout"
        android:contentDescription="@string/btn_update_profile_content_desc"
        android:text="@string/btn_update_profile_text"/>

    <Button
        android:id="@+id/btn_logout"
        style="@style/AppTheme.Button.Secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/inter_view_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/btn_logout_content_desc"
        android:text="@string/btn_logout_text"/>

</android.support.constraint.ConstraintLayout>