<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/tv_forgot_pwd_title"
        android:layout_marginTop="@dimen/inter_view_vertical_margin"
        android:text="@string/tv_forgot_pwd_title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/AppTheme.TextView.Primary"/>

    <TextView
        android:id="@+id/tv_forgot_pwd_msg"
        android:layout_marginTop="@dimen/inter_view_vertical_margin"
        android:text="@string/tv_forgot_pwd_msg_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_pwd_title"
        android:textAlignment="center"
        style="@style/AppTheme.TextView.Secondary"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/container_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_pwd_msg"
        android:layout_marginTop="@dimen/inter_section_vertical_margin">
        <EditText
            android:id="@+id/et_email"
            android:contentDescription="@string/et_email_content_desc"
            android:hint="@string/et_email_hint"
            android:imeActionLabel="@string/ime_action_label_send"
            style="@style/AppTheme.EditText"/>
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_send_pwd"
        style="@style/AppTheme.Button.Primary"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="@dimen/inter_section_vertical_margin"
        android:contentDescription="@string/btn_send_pwd_content_desc"
        android:text="@string/btn_send_pwd_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_email"/>
</android.support.constraint.ConstraintLayout>